# GreatSQL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MYSQL_VERSION  README.md  README_zh.md  config.h.cmake
.gitee/: ISSUE_TEMPLATE.zh-CN.md
Docs/: sp-imp-spec.txt
build-gs/: Jenkinsfile  README.md  build-binary.sh  build-rpm.sh  greatsql.spec  percona-server-5.7_builder.sh  percona-server-8.0_builder.sh  percona-server.spec
client/: CMakeLists.txt  client_priv.h  my_readline.h  mysql.cc  mysql_config_editor.cc  mysql_dump_encrypt.cc  mysql_dump_encrypt.h  mysqldecrypt.cc  mysqldump.cc  mysqlslap.cc  mysqltest.cc  path.cc  path.h  readline.cc
cmake/: make_dist.cmake.in  mysql_version.cmake  package_name.cmake
include/: decimal.h  greatdb_version.h  lex_string.h  m_ctype.h  mem_root_deque.h  my_aes.h  my_alloc.h  my_base.h  my_dbug.h  my_sqlcommand.h  my_sys.h  my_systime.h  my_time.h  pfs_metadata_provider.h  pfs_thread_provider.h  priority_queue.h  sql_string.h  welcome_copyright_notice.h
mysql-test/: mysql-test-run.pl  skip_err_test_list_for_mtrall  skip_err_test_list_for_mtrasan  skip_err_test_list_for_mtrdebug  skip_err_test_list_for_mtrrelease  skip_mgr_tests
mysys/: charset-def.cc  dbug.cc  mf_iocache.cc  my_aes_impl.h  my_aes_openssl.cc  my_alloc.cc  my_default.cc  my_handler_errors.h  my_systime.cc  (+2 more)
plugin/audit_log/: CMakeLists.txt  audit_log.cc  audit_login_msg.cc  install_audit_log.sql.in  uninstall_audit_log.sql.in
plugin/audit_log/tests/mtr/: audit_log_charset.result  audit_log_csv.result  audit_log_default_db.result  audit_log_filter_db.result  audit_log_json.result  audit_log_new.result  audit_log_old.result  audit_log_startup.result  audit_log_syslog.result  audit_log_to_table.result  audit_log_to_table.test  install.inc  uninstall.inc
(+2614 files in other folders)
